gatekeeper/constraints/limit-deployment-replicas.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sReplicaLimit
metadata:
  name: limit-deployment-replicas
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    maxReplicas: 5
