gatekeeper/constraints/restrict-host-network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHostNetwork
metadata:
  name: restrict-host-network
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - argocd
      - monitoring
